--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,12 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: black;
 }
 
 body {
     padding: 2rem;
-    background-color: gray;
+    background-color: lightgray;
     color: whitesmoke;
     display: flex;
     flex-direction: column;
@@ -17,6 +21,98 @@ body {
 
 input, button {
     font-size: 2rem;
-    padding: 1rem;
+    padding: 5px 12px;
+    background-color: transparent;
+    border-radius: 0px;
+    border: 3px solid gray;
     border-radius: 10px;
+    transition: .1s;
+}
+
+button {
+    background-color: lightblue;
+    color: white;
+}
+
+input::placeholder {
+    color: gray;
+    transition: .1s;
+}
+
+input:focus {
+    border: 3px solid black;
+    outline: none;
+}
+
+input:focus::placeholder {
+    color: black;
+}
+
+#weatherBox {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    border-radius: 100px;
+    padding: 100px;
+    box-shadow: 0px 0px 15px -5px;
+}
+
+#weatherBoxTop {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+    margin: 25px 0px;
+}
+
+#tempBox {
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: end;
+}
+
+#temperature {
+    font-size: 75px;
+}
+
+#statusBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #add8e6;
+    border-radius: 50px;
+    height: 250px;
+    width: 250px;
+}
+
+#status {
+    position: relative;
+    top: -50px;
+    color: rgb(64, 64, 64);
+    font-size: 24px;
+}
+
+#windBox, #precipBox {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+#statsBox {
+    display: flex;
+    gap: 50px;
+}
+
+.statsSub {
+    display: flex;
+    align-items: end;
+}
+
+.sub {
+    font-size: 21px;
+    color: rgb(64, 64, 64);
 }
