--- a/templates/city-not-found.html
+++ b/templates/city-not-found.html
@@ -10,7 +10,7 @@
     <h1>City Not Found :/</h1>
     <h2>Try Again?</h2>
     <form action="/weather">
-        <input type="text" name="city" id="city" placeholder="Enter City">
+        <input type="text" name="city" id="city" placeholder="Enter a City">
         <button type="submit">Get Weather</button>
     </form>
 </body>
