--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>TODAY'S WEATHER :D</h1>
     <form action="/weather">
-        <input type="text" name="city" id="city" placeholder="Enter City">
+        <input type="text" name="city" id="city" placeholder="Enter a City">
         <button type="submit">Get Weather</button>
     </form>
 </body>
