--- a/templates/weather.html
+++ b/templates/weather.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} Weather</title>
-    <link rel="stylesheet" href="../static/styles/style.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='styles/style.css')}}">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
             </div>
             <div id="statusBox">
                 <div id="iconContainer">
-                    <img src="https://openweathermap.org/img/wn/10d@4x.png" alt="{{ status }}">
+                    <img src="https://openweathermap.org/img/wn/{{ icon }}@4x.png" alt="{{ status }}">
                 </div>
                 <p id="status">{{ status }}</p>
             </div>
